# sanic-otel-example

./: .gitignore  Makefile  README.md  pyproject.toml
bookstore/: app_factory.py  discovery.py  log.py  server.py
bookstore/blueprints/books/: model.py  views.py
bookstore/blueprints/metrics/: otel.py  prom.py  views.py
bookstore/blueprints/otel/: metrics.py  views.py
docker/: prometheus.yml
tests/: k6-books-borrow-random.js
